# dqcsim-openql-mapper

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  OpenQL.cmake  README.md  gates.hpp  main.cpp  release.md  release.sh  setup.py  test.py
gates/: README.md  platform2gates.py  qx-gates.json
python/dqcsim_openql_mapper/: test.py
src/: gates.cpp  gates.hpp  main.cpp
test/: gates.json  hardware_config.json
